# ba-evaluation

./: .gitignore  LICENSE  README.md  Untitled.ipynb  bbox_evalutation.ipynb  copy_files.ipynb  evaluate_results.ipynb  evaluate_single.py  evaluation.py  gradients.py  helpers.py  latex_scripts.py  merging.py  pascalvoc.py  pyproject.toml  table.txt
algorithms/: __init__.py  _region_growth_exponent.py  _region_growth_simple.py  _region_growth_variance.py  base.py  fast_scanning.py  felzenszwalb.py  quickshift.py  regions_growth.py  slic.py  watershed.py
labeled_data/labels/: 20181130_FFwd_3_unpacking.json  IMG_1834.json  IMG_20190122_161535.json  IMG_20190122_163034.json  IMG_20190129_100849.json  IMG_20190129_100852.json  IMG_20190129_100900.json  IMG_20190129_100903.json  IMG_20190129_122223.json  IMG_20190129_122232.json  IMG_20190129_122239.json  IMG_20190129_153608.json  IMG_20190129_153615.json  IMG_20190129_153618.json  IMG_20190129_171323.json  IMG_20190129_171342.json  IMG_20190205_104253.json  IMG_20190208_112345.json  IMG_20190208_112409.json
results/fast_scanning/: BGR.json  Cr+Cb.json  CrCB.json  HSV.json  Lab.json  YCrCb.json  a*+b*.json  ab.json  saturation.json
results/felzenszwalb/: BGR.json  Cr+Cb.json  CrCB.json  HSV.json  Lab.json  YCrCb.json  a*+b*.json  ab.json  saturation.json
results/region_growth_exponent/: BGR.json  Cr+Cb.json  CrCB.json  HSV.json  Lab.json  YCrCb.json  a*+b*.json  ab.json  saturation.json
results/region_growth_simple/: BGR.json  Cr+Cb.json  CrCB.json  HSV.json  Lab.json  YCrCb.json  a*+b*.json  ab.json  saturation.json
(+101 files in other folders)
